# collect

./: .gitignore  README.md  ncs_stats_requires.txt  pyproject.toml  requirements.txt  requirements_old.txt  setup.cfg
archive 1.4/: client_count.py  collect.py  cpi-1.4.0-py3-none-any.whl  mylib-1.4.0-py3-none-any.whl  performance.xlsx  snr.py
src/: daemon.py  decorate.py  id_fix.py  ncsstats.service
src/collect/: RunConfigurations.sh  apdCheck.py  client_bands.py  client_count.py  collect.py  collect_cd.py  collect_cs.py  compare.py  jobScheduler.py  neighbors.py  parts.py  realtime.py  sessions.py  tracker.py
src/collect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cpiapi.egg-info/: PKG-INFO  SOURCES.txt
