[metadata]
name = collect
version = 2.0.2
author = "Dennis Risen"
author_email = "dar5@case.edu"
description = "Applications to collect and report statistics from the CPI APIs"
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/drisen/collect
project_urls =
    Bug Tracker = https://github.com/drisen/collect/issues
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src